--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CRUD Empleados</title>
+  <title>CRUD Empleados - Vite</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
   <!-- Bootstrap (en HTML, recomendado) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,11 +16,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Tus estilos -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="mb-4">Gestión de Empleados</h1>
+    <!-- Header mejorado -->
+    <div class="row mb-4">
+      <div class="col">
+        <h1 class="display-4 text-primary">
+          <i class="fas fa-users me-2"></i>
+          Gestión de Empleados
+        </h1>
+        <p class="lead text-muted">Powered by Vite + Express + MySQL</p>
+      </div>
+    </div>
 
     <!-- Formulario: crear/editar -->
     <div class="card mb-4">
@@ -74,6 +86,7 @@
 
   </div>
 
-  <script src="main.js"></script>
+  <!-- Vite will handle module bundling -->
+  <script type="module" src="/main.js"></script>
 </body>
 </html>
